feat: broadcast information as json

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -4,11 +4,25 @@
     <title>Java Spark Auctions</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
           integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
-    <script src="/script.js"></script>
 </head>
     <body>
         <h1>Hello world!</h1>
         <p id="status">Connecting...</p>
-        <button onclick="sendMessage()">Send Hello</button>
+            <button onclick="sendMessage()">Send Hello</button>
     </body>
+
+    <script>
+        const socket = new WebSocket("ws://" + window.location.host + "/ws/item?itemId=1");
+
+        socket.onopen = () => document.getElementById("status").textContent = "Connected!";
+        socket.onmessage = e => {
+            let offerResponseDto = JSON.parse(e.data)
+            // Do something  with the offerResponseDto
+        };
+        socket.onclose = () => document.getElementById("status").textContent = "Disconnected";
+
+        function sendMessage() {
+            socket.send("Hello from client");
+        }
+    </script>
 </html>
