--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -12,7 +12,7 @@
     </body>
 
     <script>
-        const socket = new WebSocket("ws://" + window.location.host + "/ws/item?itemId=1");
+        const socket = new WebSocket("ws://" + window.location.host + "/ws");
 
         socket.onopen = () => document.getElementById("status").textContent = "Connected!";
         socket.onmessage = e => {
