--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -8,20 +8,22 @@
     <body>
         <h1>Hello world!</h1>
         <p id="status">Connecting...</p>
-            <button onclick="sendMessage()">Send Hello</button>
     </body>
 
     <script>
-        const socket = new WebSocket("ws://" + window.location.host + "/ws/item?itemId=1");
+        const ws = new WebSocket("ws://" + window.location.host + "/ws");
 
-        socket.onopen = () => document.getElementById("status").textContent = "Connected!";
-        socket.onmessage = e => {
+        ws.onopen = () => {
+            document.getElementById("status").textContent = "Connected!"
+            ws.send(JSON.stringify({
+                action: "subscribe",
+                itemIds: [1,2,3,4]
+            }));
+        };
+        ws.onmessage = e => {
+            console.log("Message received")
             console.log(JSON.parse(e.data))
         };
-        socket.onclose = () => document.getElementById("status").textContent = "Disconnected";
-
-        function sendMessage() {
-            socket.send("Hello from client");
-        }
+        ws.onclose = () => document.getElementById("status").textContent = "Disconnected";
     </script>
 </html>
