feat: offers now appear in real-time

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -158,7 +158,7 @@
     }
 
     function openOffers(itemId) {
-        window.location.href = `/offers?itemId=${itemId}`;
+        window.location.href = `/items/${itemId}/offers`;
     }
 
     // --- Sorting logic ---
